--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -11,7 +11,7 @@ noinst_LTLIBRARIES = libsfio_C.la
 libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
 	sfexcept.c sfexit.c sfextern.c sffilbuf.c \
 	sfflsbuf.c \
-	sfmode.c sfnew.c sfnotify.c \
+	sfmode.c sfnew.c \
 	sfnputc.c sfopen.c sfpkrd.c sfpoll.c sfpool.c \
 	sfprintf.c sfprints.c sfpurge.c \
 	sfputr.c sfraise.c sfrd.c sfread.c \
