remove unused sfpurge()

--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -13,7 +13,7 @@ libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
 	sfflsbuf.c \
 	sfmode.c sfnew.c \
 	sfnputc.c sfopen.c sfpkrd.c \
-	sfprintf.c sfpurge.c \
+	sfprintf.c \
 	sfputr.c sfraise.c sfrd.c sfread.c \
 	sfresize.c sfscanf.c sfseek.c sfset.c sfsetbuf.c sfsetfd.c \
 	sfsize.c sfsk.c sfstack.c sfstrtod.c sfswap.c sfsync.c \
