--- a/ci/centos7/Dockerfile
+++ b/ci/centos7/Dockerfile
@@ -6,7 +6,12 @@ RUN yum -y groupinstall 'Development Tools'
 RUN yum install -y \
 # Install epel-release rpm (Needed for cmake3. Must be a separate step)
 https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/e/epel-release-7-12.noarch.rpm \
+# Install ius-release rpm (Needed for git version 2. Must be a separate step)
+https://repo.ius.io/ius-release-el7.rpm \
 && yum clean all && rm -rf /var/cache/yum
+
+# Remove old version of git
+RUN yum -y remove git
 
 # Centos build utilities
 RUN yum -y install \
@@ -14,6 +19,8 @@ libtool-ltdl-devel \
 libedit-devel \
 ksh \
 cmake3 \
+# Git version 2 needed to get the option --date=format-local:... used in gen_version.py
+https://repo.ius.io/7/x86_64/packages/g/git224-2.24.3-1.el7.ius.x86_64.rpm \
 # Option glut
 freeglut-devel \
 # Option gts
