--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -17,7 +17,7 @@ libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
 	sfputr.c sfraise.c sfrd.c sfread.c \
 	sfresize.c sfscanf.c sfseek.c sfsetbuf.c sfsetfd.c \
 	sfsk.c sfstack.c sfswap.c sfsync.c \
-	sftable.c sftell.c sftmp.c sfungetc.c sfvprintf.c \
+	sftable.c sftmp.c sfungetc.c sfvprintf.c \
 	sfvscanf.c sfwr.c sfwrite.c
 
 libsfio_C_la_DEPENDENCIES = \
