remove now unused vthread.h

--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = Sfio_f
 
 AM_CPPFLAGS = -I$(top_srcdir)/lib
 
-noinst_HEADERS = sfhdr.h sfio.h sfio_t.h vthread.h
+noinst_HEADERS = sfhdr.h sfio.h sfio_t.h
 noinst_LTLIBRARIES = libsfio_C.la
 
 libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
