--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -254,6 +254,7 @@ macos-autotools-build:
         - brew update
         - brew install autogen || brew upgrade autogen
         - brew install bison || brew upgrade bison
+        - brew install pango || brew upgrade pango
         - export PATH="/usr/local/opt/bison/bin:$PATH"
         - export build_system="autotools"
         - python3 gen_version.py > VERSION # FIXME: remove when building from portable source
@@ -294,6 +295,7 @@ macos-cmake-build:
         - brew update
         - brew install cmake || brew upgrade cmake
         - brew install bison || brew upgrade bison
+        - brew install pango || brew upgrade pango
         - export PATH="/usr/local/opt/bison/bin:$PATH"
         - export build_system="cmake"
         - python3 gen_version.py > VERSION
