Ensure that Graphviz tools are found first in Windows CMake jobs
Prepend Graphviz bin directory to path instead of appending it.

The tools test found
C:\Program Files (x86)\Windows Kits\10\bin\10.0.18362.0\x86\gc.exe
before Graphviz gc.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,7 +139,7 @@ portable-source:
               # will then fail because the install hasn't finished)
               ./graphviz-install.exe /S /D=$env:graphviz_install_dir | Out-Null;
               mv graphviz-install.exe graphviz-install-$Env:GV_VERSION-$API.exe;
-              $env:Path += ";" + $env:graphviz_install_dir + "\bin"
+              $env:Path = $env:graphviz_install_dir + "\bin" + ";" + $env:Path
               cd ..;
               $Env:INCLUDE += ";C:\Graphviz\include";
               $Env:LIB += ";C:\Graphviz\lib";
