Enable dotty, lefty, lneato and vimdot to be built on macOS.
Enabled by adding brew install libxaw to macOS builds

Fixes https://gitlab.com/graphviz/graphviz/-/issues/1858

Towards https://gitlab.com/graphviz/graphviz/-/issues/1854

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,7 @@ portable-source:
         - brew install cmake || brew upgrade cmake
         - brew install bison || brew upgrade bison
         - brew install pango || brew upgrade pango
+        - brew install libxaw || brew upgrade libxaw
         - export PATH="/usr/local/opt/bison/bin:$PATH"
         - python3 gen_version.py > VERSION # FIXME: remove when building from portable source
         - echo experimental > COLLECTION
