--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -268,6 +268,9 @@ ubuntu18-04-cmake-build:
     <<: *deb_build_definition
     before_script:
         - export build_system="cmake"
+        # fail on any compiler warnings
+        - export CFLAGS=-Werror
+        - export CXXFLAGS=-Werror
         - echo experimental > COLLECTION
     tags:
         - linux
@@ -277,6 +280,9 @@ centos7-cmake-build:
     <<: *rpm_build_definition
     before_script:
         - export build_system="cmake"
+        # fail on any compiler warnings
+        - export CFLAGS=-Werror
+        - export CXXFLAGS=-Werror
         - echo experimental > COLLECTION
     tags:
         - linux
@@ -286,6 +292,9 @@ fedora31-cmake-build:
     <<: *rpm_build_definition
     before_script:
         - export build_system="cmake"
+        # fail on any compiler warnings
+        - export CFLAGS=-Werror
+        - export CXXFLAGS=-Werror
         - echo experimental > COLLECTION
     tags:
         - linux
@@ -295,6 +304,9 @@ macos-cmake-build:
     <<: *macos_build_definition
     before_script:
         - export build_system="cmake"
+        # fail on any compiler warnings
+        - export CFLAGS=-Werror
+        - export CXXFLAGS=-Werror
     tags:
         - macos
 
