Add ubuntu20-10-test job to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -413,6 +413,19 @@ ubuntu20-04-test:
         - linux
     image: "graphviz/graphviz:ubuntu-20.04"
 
+ubuntu20-10-test:
+    <<: *test_definition
+    before_script:
+        - export build_system="autotools"
+    needs:
+        - job: portable-source
+          artifacts: true
+        - job: "ubuntu20-10-build"
+          artifacts: true
+    tags:
+        - linux
+    image: "graphviz/graphviz:ubuntu-20.10"
+
 centos6-test:
     <<: *test_definition
     before_script:
