--- a/cmd/dot/dot.vcxproj
+++ b/cmd/dot/dot.vcxproj
@@ -71,7 +71,14 @@
       <AdditionalDependencies>cgraph.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>$(OutDir)dot -c</Command>
+      <Command>$(OutDir)dot -c
+copy /B /Y $(OutDir)dot.exe $(OutDir)circo.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)fdp.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)neato.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)osage.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)patchwork.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)sfdp.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)twopi.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -94,7 +101,14 @@
       <AdditionalDependencies>cgraph.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>$(OutDir)dot -c</Command>
+      <Command>$(OutDir)dot -c
+copy /B /Y $(OutDir)dot.exe $(OutDir)circo.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)fdp.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)neato.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)osage.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)patchwork.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)sfdp.exe
+copy /B /Y $(OutDir)dot.exe $(OutDir)twopi.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
