Add build of lib/gvpr using CMake
Towards https://gitlab.com/graphviz/graphviz/-/issues/1878.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(common)
 add_subdirectory(dotgen)
 add_subdirectory(expr)
 add_subdirectory(fdpgen)
+add_subdirectory(gvpr)
 add_subdirectory(ingraphs)
 add_subdirectory(label)
 add_subdirectory(mingle)
