Add build of lib/expr using CMake
Towards https://gitlab.com/graphviz/graphviz/-/issues/1878.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(cdt)
 add_subdirectory(circogen)
 add_subdirectory(common)
 add_subdirectory(dotgen)
+add_subdirectory(expr)
 add_subdirectory(fdpgen)
 add_subdirectory(ingraphs)
 add_subdirectory(label)
