Add build of lib/sfio using CMake
Towards https://gitlab.com/graphviz/graphviz/-/issues/1878.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(osage)
 add_subdirectory(pack)
 add_subdirectory(patchwork)
 add_subdirectory(pathplan)
+add_subdirectory(sfio)
 add_subdirectory(rbtree)
 add_subdirectory(sparse)
 add_subdirectory(sfdpgen)
