--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -8,7 +8,7 @@ noinst_HEADERS = sfhdr.h sfio.h sfio_t.h
 noinst_LTLIBRARIES = libsfio_C.la
 
 libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
-	sfexcept.c sfexit.c sfextern.c sffilbuf.c \
+	sfexcept.c sfextern.c sffilbuf.c \
 	sfflsbuf.c \
 	sfmode.c sfnew.c \
 	sfnputc.c sfopen.c sfpkrd.c \
