--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -604,26 +604,15 @@ macos-cmake-test:
 
 deployment:
     stage: deploy
+    image: registry.gitlab.com/gitlab-org/release-cli:latest
+    # do not re-run this job for new Git tags of previously seen commits
+    except:
+        - tags
+    before_script:
+        - apk add --update-cache curl
+        - apk add --update-cache python3
     script:
-        - GV_VERSION=$( cat VERSION )
-        - COLLECTION=$( cat COLLECTION )
-        - eval $(ssh-agent -s)
-        - cat "$DEPLOY_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
-        - ssh-keyscan "$DEPLOY_HOST" >> ~/.ssh/known_hosts
-        - chmod 644 ~/.ssh/known_hosts
-        - chmod -R o-rwx Packages
-        - chmod -R g-wx Packages
-        - chmod -R g+X Packages
-        - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" 'rm -rf Packages/'"$COLLECTION"'/{fedora,centos,ubuntu,windows}'
-        - scp -r Packages/* "$DEPLOY_USER"@"$DEPLOY_HOST"':'Packages/
-        - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" 'for i in Packages/'"$COLLECTION"'/{fedora,centos}/*/{source,os/*,debug/*}; do createrepo $i; done'
-        - scp graphviz-fedora.repo graphviz-centos.repo "$DEPLOY_USER"@"$DEPLOY_HOST"':'Packages/
-        - ssh "$DEPLOY_USER"@"$DEPLOY_HOST" mkdir -p Packages/"$COLLECTION"/portable_source
-        - md5sum graphviz-"$GV_VERSION".tar.gz >graphviz-"$GV_VERSION".tar.gz.md5
-        - scp graphviz-"$GV_VERSION".tar.gz graphviz-"$GV_VERSION".tar.gz.md5 "$DEPLOY_USER"@"$DEPLOY_HOST"':'Packages/"$COLLECTION"/portable_source/
+        - python3 ci/deploy.py --verbose
+    # do not run this job for MRs, developer’s forks, etc.
     only:
         - master@graphviz/graphviz
-    tags:
-        - graphviz,deploy
