support Guile 2.2 in the Autotools build system
The build system detection of Guile was relying on a binary named guile-config.
As of Guile 2.2, coexisting versions of Guile are supported and so the
guile-config binary is suffixed with its version. The result of this mismatch
was that the build system would fail to detect Guile 2.2 on platforms that did
not provide a guile-config redirection shim.

Guile 3.0 has already been out for awhile, but this commit does not add support
for it. The devel packages for it do not seem yet available on any major Linux
distro. We should extend this support to 3.0 when it becomes more widely
available if Graphviz' use of Guile is compatible. Related to #1885.

--- a/configure.ac
+++ b/configure.ac
@@ -701,7 +701,7 @@ else
     if test `$SWIG -help 2>&1 | $EGREP -c '\-guile *- Generate'` = 0; then
       use_guile="No (swig does not support -guile option)"
     else
-      AC_CHECK_PROGS(GUILE_CONFIG,guile-config)
+      AC_CHECK_PROGS(GUILE_CONFIG,guile-config2.2 guile-config)
       if test "x$GUILE_CONFIG" = "x"; then
         use_guile="No (guile not available)"
       else
