require C++11 support for compiling
Closes #1832.

--- a/configure.ac
+++ b/configure.ac
@@ -311,6 +311,7 @@ dnl checks for compilers
 AM_PROG_CC_C_O
 AC_PROG_CC_C99
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_11(noext,mandatory)
 AC_PROG_OBJC
 
 AC_C_INLINE
