--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -182,6 +182,8 @@ portable-source:
             junit: ./report.xml
     tags:
         - windows
+    except:
+        - tags
 
 .test_template: &test_definition
     stage: test
@@ -193,6 +195,8 @@ portable-source:
     artifacts:
         reports:
             junit: ./report.xml
+    except:
+        - tags
 
 centos7-build:
     <<: *rpm_build_definition
@@ -379,6 +383,8 @@ meta-data:
     artifacts:
         paths:
             - configuration-*.html
+    except:
+        - tags
 
 ubuntu18-04-test:
     <<: *test_definition
