fix: add header guard to graphviz_version.h
To prevent users #including this multiple times getting compiler warnings.
Closes #1929.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,8 @@ dist-hook:
 BUILT_SOURCES = $(top_builddir)/graphviz_version.h
 
 $(top_builddir)/graphviz_version.h: config.h
-	$(EGREP) 'PACKAGE|VERSION|GVPLUGIN' config.h > $(top_builddir)/graphviz_version.h
+	printf '#pragma once\n' > $(top_builddir)/graphviz_version.h
+	$(EGREP) 'PACKAGE|VERSION|GVPLUGIN' config.h >> $(top_builddir)/graphviz_version.h
 
 EXTRA_DIST = $(txt) $(html) graphviz.spec \
 	autogen.sh config/depcomp config/config.rpath \
