--- a/configure.ac
+++ b/configure.ac
@@ -465,7 +465,7 @@ LIBS=$save_LIBS
 
 # Checks for library functions
 AC_CHECK_FUNCS([lrand48 drand48 srand48 setmode setenv getenv \
-	cbrt vsnprintf mallopt mallinfo mstats getpagesize \
+	cbrt mallopt mallinfo mstats getpagesize \
   ftruncate lseek64 stat64 vfork unlink waitpid select])
 
 AC_REPLACE_FUNCS([strcasestr])
