--- a/lib/ast/Makefile.am
+++ b/lib/ast/Makefile.am
@@ -8,6 +8,6 @@ noinst_LTLIBRARIES = libast_C.la
 libast_C_la_SOURCES = pathpath.c sfstr.h chresc.c chrtoi.c error.c \
 	fmtbuf.c fmtesc.c pathaccess.c pathbin.c pathcanon.c pathcat.c \
 	pathexists.c pathfind.c pathgetlink.c \
-	strcopy.c stresc.c strmatch.c strton.c
+	strcopy.c stresc.c strmatch.c
 
 EXTRA_DIST = compat_unistd.h ast.vcxproj*
