Attempt fixing CentOS8 Dockerfile
Apparently this is now powertools, lowercase:

https://serverfault.com/questions/997896/how-to-enable-powertools-repository-in-centos-8

Towards #1945

--- a/ci/centos8/Dockerfile
+++ b/ci/centos8/Dockerfile
@@ -3,7 +3,7 @@ FROM centos:8
 
 # Development tools
 RUN yum -y groupinstall 'Development Tools'
-RUN dnf config-manager --set-enabled PowerTools
+RUN dnf config-manager --set-enabled powertools
 
 # Centos build utilities
 RUN yum -y install \
