Install cmake in ubuntu-18.04 image
I suppose sometime, canonical must have removed cmake from the deps of another package we installed.

Towards #1946

--- a/ci/ubuntu-18.04/Dockerfile
+++ b/ci/ubuntu-18.04/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update -y \
 && apt-get install --no-install-recommends -y \
 # Development tools
 build-essential \
+cmake \
 git \
 pkg-config \
 autoconf \
