Smoosh some Dockerfile layers into one
This is kind of a test for the new automatic building of dockerfiles.

This should make for smaller images and slightly faster CI runs.

The tradeoff is slower local builds if you'd cached the earlier bits.

But now we can easily build these on the cloud when changed.

--- a/ci/centos7/Dockerfile
+++ b/ci/centos7/Dockerfile
@@ -1,20 +1,17 @@
 FROM centos:7
 
 # Development tools
-RUN yum -y groupinstall 'Development Tools'
-
-RUN yum install -y \
+RUN yum -y groupinstall 'Development Tools' \
+&& yum install -y \
 # Install epel-release rpm (Needed for cmake3. Must be a separate step)
 https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/e/epel-release-7-12.noarch.rpm \
 # Install ius-release rpm (Needed for git version 2. Must be a separate step)
 https://repo.ius.io/ius-release-el7.rpm \
-&& yum clean all && rm -rf /var/cache/yum
-
+&& yum clean all && rm -rf /var/cache/yum \
 # Remove old version of git
-RUN yum -y remove git
-
+&& yum -y remove git \
 # Centos build utilities
-RUN yum -y install \
+&& yum -y install \
 libtool-ltdl-devel \
 libedit-devel \
 ksh \
