--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -585,9 +585,12 @@ deployment:
     - tags
   script:
     - cd ci/$IMAGE
-    # Build and push with git commit SHA
+    # Build and push with git commit SHA tag
     - docker build -t $CI_REGISTRY/graphviz/graphviz/$IMAGE:$CI_COMMIT_SHA .
     - docker push     $CI_REGISTRY/graphviz/graphviz/$IMAGE:$CI_COMMIT_SHA
+    # Re-tag, push to :latest tag
+    - docker tag $CI_REGISTRY/graphviz/graphviz/$IMAGE:$CI_COMMIT_SHA $CI_REGISTRY/graphviz/graphviz:latest
+    - docker push     $CI_REGISTRY/graphviz/graphviz:latest
     # Re-tag, backwards compatibility for the tests which are still using graphviz/graphviz:image-name
     - docker tag $CI_REGISTRY/graphviz/graphviz/$IMAGE:$CI_COMMIT_SHA $CI_REGISTRY/graphviz/graphviz:$IMAGE
     - docker push     $CI_REGISTRY/graphviz/graphviz:$IMAGE
